--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es5",
     "lib": ["es2015"],
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "build",
     "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
