--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dist/index.js",
+    "start": "concurrently \"npm:watch-ts\" \"npm:watch-node\"",
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typesafe-hapi": "^3.0.0"
+    "@hapi/hapi": "^18.3.1",
+    "typesafe-hapi": "^3.0.0",
+    "typesafe-joi": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^12.0.2",
-    "nodemon": "^1.19.0",
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.19.1",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
