--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es5",
-    "lib": ["es2015"],
+    "target": "es6",
     "rootDir": "src",
-    "outDir": "build",
+    "outDir": "dist",
     "module": "commonjs",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "strict": true,
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
-    "types": ["node"],
     "paths": {
+      "*": ["node_modules/*", "src/types/*"],
       "hapi": ["node_modules/typesafe-hapi"],
       "joi": ["node_modules/typesafe-joi"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
