--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^18.3.1",
+    "@hapi/nes": "^11.2.0",
     "typesafe-hapi": "^3.0.0",
-    "typesafe-joi": "^2.0.5"
+    "typesafe-joi": "^2.0.5",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/hapi__nes": "^11.0.2",
     "@types/node": "^12.0.2",
+    "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.1",
     "tslint": "^5.16.0",
