--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/malydok/hex-api"
   },
   "scripts": {
+    "postinstall": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && concurrently \"npm:watch-ts\" \"npm:watch-node\"",
     "watch-ts": "tsc -w",
