--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/hapi": "^18.4.0",
     "@hapi/nes": "^11.2.2",
     "human-readable-ids": "^1.0.4",
+    "lodash": "^4.17.15",
     "typesafe-hapi": "^4.0.1",
     "typesafe-joi": "^2.1.0",
     "uuid": "^3.3.3"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/hapi__nes": "^11.0.3",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.4",
     "@types/uuid": "^3.4.6",
     "concurrently": "^5.0.2",
